# aletheia

./: .env.example  .gitignore  Auto_Team_schedule_v2.bat  Auto_Team_schedule_v3.bat  EP_TEAM_ScheduleChecker_v0.py  README.md  SERVER_MANAGE.md  logs.txt  package-lock.json  package.json
.claude/: settings.json  settings.local.json
backup/20260506_140025/: planner.db-shm  planner.db-wal
data/: holidays.json  team_peers.csv  team_peers.example.csv  team_settings.example.json  team_settings.json
md/: 260505_140137_작업내용.md  260505_140556_작업내용.md  260505_141554_작업내용.md  260505_141849_작업내용.md  260505_212601_작업내용.md  260506_204544_작업내용.md  260506_204750_작업내용.md  260506_204945_작업내용.md  260506_205110_작업내용.md  260507_070355_작업내용.md  260508_143752_작업내용.md  260508_174752_작업내용.md  260510_211044_배포전검토.md  PROJECT_LOG.md  cowork_Server_구성.md
public/: app.js  index.html  styles.css
src/: backup.js  db.js  holidays.js  server.js
src/engine/: scheduler.js
src/routes/: archive.js  attachments.js  categories.js  dependencies.js  reports.js  schedules.js  sprint_groups.js  tasks.js  team.js
src/team/: archiveExporter.js  cache.js  csvPeers.js  events.js  exporter.js  peerBroadcaster.js  peerStore.js  peerWatcher.js  settings.js  (+1 more)
tools/ics/: ICS_read_PW_v1.py  ICS_send_PW_v7.py  README.md  ics_crawling.py  ics_fetch.py  ics_session.py  pyproject.toml  query_camera_sprint.py  requirements_windows.txt  run.bat  run_pip.bat  save_password.py  setup_pip.bat  setup_uv.bat  sync_sprint_to_aletheia.py
tools/ics/docs/: ics_password_update.md  ics_teams_chat_automation_report.md
(+14 files in other folders)
