[project]
name = "18-ics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "keyring>=25.0.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.9",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "selenium>=4.41.0",
]
